removed redudent headings

--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
 
     <section id="digital-living" class="digital-living">
         <div class="digital-living-container">
-            <h2 class="section-title">Digital Living</h2>
+            <h2 class="section-title"></h2>
             <p class="section-subtitle"></p>
             
             <div class="living-grid">
@@ -837,7 +837,7 @@
                 <div class="category-section">
                     <div class="category-header">
                         <h3></h3>
-                        <p>Bridging imagination and manifestation</p>
+                        <p></p>
                     </div>
                     <div class="articles-grid">
                         <a href="creator-toolkit.html" class="article-card">
@@ -868,7 +868,7 @@
                 <div class="category-section">
                     <div class="category-header">
                         <h3></h3>
-                        <p>Tools for testing different states of existence</p>
+                        <p></p>
                     </div>
                     <div class="articles-grid">
                         <a href="conscious-travel.html" class="article-card">
@@ -899,7 +899,7 @@
                 <div class="category-section">
                     <div class="category-header">
                         <h3></h3>
-                        <p>Tools and practices for expanding awareness</p>
+                        <p></p>
                     </div>
                     <div class="articles-grid">
                         <a href="sleep-architecture.html" class="article-card">
@@ -931,7 +931,7 @@
 
     <section id="thoughts" class="thoughts">
         <div class="thoughts-container">
-            <h2 class="section-title">Latest Codex Enquiries</h2>
+            <h2 class="section-title"></h2>
             <div class="thought-cards">
                 <a href="reality-as-an-algorithm.html" class="thought-card">
                     <div class="thought-meta">
@@ -968,21 +968,21 @@
     </section>
 
     <section id="work" class="featured">
-        <h2 class="section-title">Simulations Under Construction</h2>
+        <h2 class="section-title"></h2>
         <div class="work-grid">
             <a href="work.html#reality-matrix" class="work-item">
                 <img class="work-img" src="blog/reality-matrix.jpg" alt="Reality Matrix">
                 <div class="work-overlay">
-                    <h3 class="work-title">Reality Matrix - Meta-Reality Simulation</h3>
-                    <p class="work-desc">A metaphysical simulation Engine written in Python that models reality as a quantum entangled network of beliefs, emotions and narratives. Built from scratch using NumPY and NetworkX, it explores how consciousness, economics and myth co-evolve - merging philosophy, AI systems thinking, and speculative coding into one metaphoric universe.</p>
+                    <h3 class="work-title">Meta-Reality Simulation</h3>
+                    <p class="work-desc">A metaphysical simulation Engine written in Python that models reality as a quantum entangled network of beliefs, emotions and narratives. </p>
                 </div>
             </a>
             
             <a href="work.html#synapse-atlas" class="work-item">
                 <img class="work-img" src="blog/synapse.jpg" alt="Synapse Atlas">
                 <div class="work-overlay">
-                    <h3 class="work-title">Synapse Atlas - Interactive Map of Consciousness</h3>
-                    <p class="work-desc">A generative web app that visualizes human thought and connection as a living network. Users can map their ideas, emotions, and inspirations into nodes and links, forming a digital atlas. Built with React and D3.js, with AI powered insight linking via language embeddings - bridging neural patterns, creative memory, and machine learning.</p>
+                    <h3 class="work-title">Synapse Atlas</h3>
+                    <p class="work-desc">A generative web app that visualizes human thought and connection as a living network. </p>
                 </div>
             </a>
         </div>
