added new section headings

--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
 
     <section id="digital-living" class="digital-living">
         <div class="digital-living-container">
-            <h2 class="section-title"></h2>
+            <h2 class="section-title">DIGITAL LIVING SYSTEMS AND TOOLS </h2>
             <p class="section-subtitle"></p>
             
             <div class="living-grid">
@@ -931,7 +931,7 @@
 
     <section id="thoughts" class="thoughts">
         <div class="thoughts-container">
-            <h2 class="section-title"></h2>
+            <h2 class="section-title">LATEST CODEX ENQUIRIES INTO THE NATURE OF REALITY</h2>
             <div class="thought-cards">
                 <a href="reality-as-an-algorithm.html" class="thought-card">
                     <div class="thought-meta">
@@ -968,7 +968,7 @@
     </section>
 
     <section id="work" class="featured">
-        <h2 class="section-title"></h2>
+        <h2 class="section-title">SIMULATIONS</h2>
         <div class="work-grid">
             <a href="work.html#reality-matrix" class="work-item">
                 <img class="work-img" src="blog/reality-matrix.jpg" alt="Reality Matrix">
